# time-objto

./: .env.example  README.md  docker-compose.yml  index.html  package-lock.json  package.json  vite.config.js
docs/: DEPLOYMENT.md
server/: Dockerfile  package-lock.json  package.json
server/src/: db.js  index.js
src/: App.jsx  app.css  data.js  main.jsx  themes.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: README.md  icon.icns
src-tauri/src/: lib.rs
src/components/: ManualEntryModal.jsx  PomodoroTimer.jsx  TagPicker.jsx  TweaksPanel.jsx  ui.jsx
src/utils/: api.js  exportPdf.js  storage.js  tracking.js
src/views/: Clients.jsx  Dashboard.jsx  Goals.jsx  MainCalendar.jsx  MainTimeline.jsx  MainTriage.jsx  MainView.jsx  MiniWidget.jsx  Onboarding.jsx  Projects.jsx  Reports.jsx  Review.jsx  Settings.jsx  Widget.jsx
